# scout

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
drivers/scout-nrf24l01/: Cargo.toml  README.md
drivers/scout-nrf24l01/src/: lib.rs  nrf24l01.rs
drivers/scout-st-spin-32/: Cargo.toml  README.md
drivers/scout-st-spin-32/src/: bsp.rs  lib.rs  sip.rs
drivers/scout-st-spin-32/src/bsp/: steval_esc002v1.rs  steval_spin3202_6_step.rs
scout-esc/: Cargo.toml  README.md  build.rs  memory.x  openocd.cfg
scout-esc/.cargo/: config.toml
scout-esc/src/: main.rs
scout-fc/: Cargo.toml  README.md  memory.x  openocd.cfg
scout-fc/.cargo/: config.toml
scout-fc/src/: main.rs
src/: main.rs
src/drivers/radio/: mod.rs  nrf24_syma.rs  nrf24l01.rs
