cargo-features = ["per-package-target"]

[package]
name = "scout-esc"
version = "0.1.0"
edition = "2021"
default-target = "thumbv6m-none-eabi"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# embassy-sync = { version = "0.1.0", path = "../embassy/embassy-sync", features = ["defmt"] }
# embassy-executor = { version = "0.1.0", path = "../embassy/embassy-executor", features = ["defmt", "integrated-timers"] }
# embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
# embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = ["nightly", "unstable-traits", "defmt", "stm32f446re", "time-driver-any", "exti"]  }
# embassy-embedded-hal = { version = "0.1.0", path = "../embassy/embassy-embedded-hal" }

embassy-sync = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "unstable-pac", "defmt", "stm32f031c6", "time-driver-any", "exti"]  }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }

scout-st-spin-32  = { path = "../drivers/scout-st-spin-32" }

[features]
default = [
  "defmt-default",
]

defmt-default = []